# eshop-23.09.2025

./: .gitignore  alembic.ini  ecommerce.db  pyproject.toml  requirements.txt
app/: auth.py  database.py  db_depends.py  schemas.py
app/core/: config.py
app/migrations/: env.py
app/migrations/versions/: 2025_09_29_1905-a7224c62a0b5_create_categories_and_products_tables.py  2f1d7d6cde66_add_review.py  91d758a28473_initial_migration_for_postgresql.py  cf40062b535c_add_user_model.py  f82b7561f2ac_start_database.py
app/models/: categories.py  products.py  reviews.py  users.py
app/routers/: categories.py  products.py  reviews.py  users.py
